// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuPopover Snapshots Menu enablePortal snapshot 1`] = `
<DocumentFragment>
  .c4 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c4:not(.color-override) g,
.c4:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c4:not(.color-override) g[stroke-width],
.c4:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c4:not(.color-override) g[stroke-width] *,
.c4:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c4.start {
  margin-right: var(--bds-sizes-size-8);
}

.c4.end {
  margin-left: var(--bds-sizes-size-8);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  box-sizing: border-box;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  height: 100%;
}

.c2 .btn-label {
  display: inherit;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  -webkit-letter-spacing: .015rem;
  -moz-letter-spacing: .015rem;
  -ms-letter-spacing: .015rem;
  letter-spacing: .015rem;
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: 500;
}

.c2 .btn-label > .btn-start-icon {
  margin-right: var(--bds-sizes-size-8);
}

.c2 .btn-label > .btn-end-icon {
  margin-left: var(--bds-sizes-size-8);
}

.c2 .btn-label > .btn-end-icon svg {
  width: var(--bds-sizes-size-16);
  height: var(--bds-sizes-size-16);
}

.c2 .btn-label > .btn-start-icon,
.c2 .btn-label > .btn-end-icon,
.c2 .btn-label > .icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2.full-width {
  width: 100%;
  padding: var(--bds-sizes-size-12) var(--bds-sizes-size-32);
}

.c2.elevation {
  box-shadow: var(--bds-shadows-shadow-03);
}

.c2.variant--primary:enabled,
.c2.variant--primary.enabled {
  background-color: var(--btn-base);
  border-color: var(--btn-base);
}

.c2.variant--primary:enabled .btn-label,
.c2.variant--primary.enabled .btn-label {
  color: var(--btn-text);
}

.c2.variant--primary:enabled .btn-label .icon path,
.c2.variant--primary.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c2.variant--primary:hover,
.c2.variant--primary.hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-hover);
}

.c2.variant--primary:focus,
.c2.variant--primary.focus {
  box-shadow: inset 0 0 0 1px var(--btn-base),inset 0px 0 0 2px var(--btn-focus);
}

.c2.variant--primary:focus:hover,
.c2.variant--primary.focus:hover {
  box-shadow: inset 0 0 0 1px var(--btn-hover),inset 0px 0 0 2px var(--btn-focus);
}

.c2.variant--primary:active,
.c2.variant--primary.active {
  background-color: var(--btn-pressed);
  border-color: var(--btn-pressed);
}

.c2.variant--primary:disabled,
.c2.variant--primary.disabled {
  background-color: var(--btn-disabled);
  border-color: transparent;
}

.c2.variant--primary:disabled .btn-label,
.c2.variant--primary.disabled .btn-label {
  color: var(--btn-disabled);
}

.c2.variant--primary:disabled .btn-label .icon path,
.c2.variant--primary.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c2.variant--primary.c1.variant--primary.size--jumbo:focus,
.c2.variant--primary.c2.variant--primary.size--jumbo.focus {
  box-shadow: inset 0 0 0 2px var(--btn-base),inset 0px 0 0 4px var(--btn-focus);
}

.c2.variant--secondary:enabled,
.c2.variant--secondary.enabled {
  background-color: transparent;
  border-color: var(--btn-base);
}

.c2.variant--secondary:enabled .btn-label,
.c2.variant--secondary.enabled .btn-label {
  color: var(--btn-text);
}

.c2.variant--secondary:enabled .btn-label .icon path,
.c2.variant--secondary.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c2.variant--secondary:hover,
.c2.variant--secondary.hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-base);
}

.c2.variant--secondary:focus,
.c2.variant--secondary.focus {
  background-color: transparent;
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c2.variant--secondary:active,
.c2.variant--secondary:focus:active,
.c2.variant--secondary.active {
  background-color: var(--btn-pressed);
  border-color: var(--btn-focus);
}

.c2.variant--secondary:disabled,
.c2.variant--secondary.disabled {
  background-color: transparent;
  border-color: var(--btn-disabled);
}

.c2.variant--secondary:disabled .btn-label,
.c2.variant--secondary.disabled .btn-label {
  color: var(--btn-disabled);
}

.c2.variant--secondary:disabled .btn-label .icon path,
.c2.variant--secondary.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c2.variant--tertiary:enabled,
.c2.variant--tertiary.enabled {
  background-color: var(--btn-base-subdued);
  border-color: var(--btn-base-subdued);
}

.c2.variant--tertiary:enabled .btn-label,
.c2.variant--tertiary.enabled .btn-label {
  color: var(--btn-text);
}

.c2.variant--tertiary:enabled .btn-label .icon path,
.c2.variant--tertiary.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c2.variant--tertiary:hover,
.c2.variant--tertiary.hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-hover);
}

.c2.variant--tertiary:focus,
.c2.variant--tertiary.focus {
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c2.variant--tertiary:focus:hover,
.c2.variant--tertiary.focus:hover {
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c2.variant--tertiary:active,
.c2.variant--tertiary.active {
  background-color: var(--btn-pressed);
  border-color: var(--btn-pressed);
}

.c2.variant--tertiary:disabled,
.c2.variant--tertiary.disabled {
  background-color: var(--btn-disabled-subdued);
  border-color: var(--btn-disabled-subdued);
}

.c2.variant--tertiary:disabled .btn-label,
.c2.variant--tertiary.disabled .btn-label {
  color: var(--btn-disabled);
}

.c2.variant--tertiary:disabled .btn-label .icon path,
.c2.variant--tertiary.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c2.variant--ghost:enabled,
.c2.variant--ghost.enabled {
  background-color: transparent;
  border-color: transparent;
}

.c2.variant--ghost:enabled .btn-label,
.c2.variant--ghost.enabled .btn-label {
  color: var(--btn-text);
}

.c2.variant--ghost:enabled .btn-label .icon path,
.c2.variant--ghost.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c2.variant--ghost:hover,
.c2.variant--ghost.hover {
  background-color: var(--btn-hover);
  border-color: transparent;
}

.c2.variant--ghost:focus,
.c2.variant--ghost.focus {
  background-color: transparent;
  border-color: transparent;
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c2.variant--ghost:focus:hover,
.c2.variant--ghost.focus:hover {
  background-color: var(--btn-hover);
  border-color: transparent;
}

.c2.variant--ghost:active,
.c2.variant--ghost:focus:active,
.c2.variant--ghost.active {
  background-color: var(--btn-pressed);
  border-color: transparent;
}

.c2.variant--ghost:disabled,
.c2.variant--ghost.disabled {
  background-color: transparent;
  border-color: transparent;
}

.c2.variant--ghost:disabled .btn-label,
.c2.variant--ghost.disabled .btn-label {
  color: var(--btn-disabled);
}

.c2.variant--ghost:disabled .btn-label .icon path,
.c2.variant--ghost.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c2.variant--inverse:enabled,
.c2.variant--inverse.enabled {
  background-color: var(--btn-base-subdued);
  border-color: var(--btn-base-subdued);
}

.c2.variant--inverse:enabled .btn-label,
.c2.variant--inverse.enabled .btn-label {
  color: var(--btn-text);
}

.c2.variant--inverse:enabled .btn-label .icon path,
.c2.variant--inverse.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c2.variant--inverse:hover,
.c2.variant--inverse.hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-hover);
}

.c2.variant--inverse:focus,
.c2.variant--inverse.focus {
  background-color: var(--btn-base-subdued);
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c2.variant--inverse:focus:hover,
.c2.variant--inverse.focus:hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-focus);
}

.c2.variant--inverse:active,
.c2.variant--inverse.active {
  background-color: var(--btn-pressed);
  border-color: var(--btn-pressed);
}

.c2.variant--inverse:disabled,
.c2.variant--inverse.disabled {
  background-color: var(--btn-base-subdued);
  border-color: var(--btn-base-subdued);
}

.c2.variant--inverse:disabled .btn-label,
.c2.variant--inverse.disabled .btn-label {
  color: var(--btn-disabled);
}

.c2.variant--inverse:disabled .btn-label .icon path,
.c2.variant--inverse.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c2.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.shape--squared {
  border-radius: 0;
}

.c2.shape--circle {
  border-radius: var(--bds-border-radius-circle);
}

.c2.size--small {
  min-height: var(--bds-sizes-size-40);
  padding: 0 var(--bds-sizes-size-20);
}

.c2.size--small .btn-label {
  font-size: var(--bds-sizes-size-12);
  line-height: var(--bds-sizes-size-16);
}

.c2.size--small .btn-label .btn-start-icon,
.c2.size--small .btn-label .btn-end-icon,
.c2.size--small .btn-label .icon {
  width: var(--bds-sizes-size-12);
  height: var(--bds-sizes-size-12);
}

.c2.size--medium {
  min-height: var(--bds-sizes-size-48);
  padding: 0 var(--bds-sizes-size-32);
}

.c2.size--medium .btn-label {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c2.size--medium .btn-label .btn-start-icon,
.c2.size--medium .btn-label .btn-end-icon,
.c2.size--medium .btn-label .icon {
  width: var(--bds-sizes-size-14);
  height: var(--bds-sizes-size-14);
}

.c2.size--large {
  min-height: var(--bds-sizes-size-56);
  padding: 0 var(--bds-sizes-size-32);
}

.c2.size--large .btn-label {
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
}

.c2.size--large .btn-label .btn-start-icon,
.c2.size--large .btn-label .btn-end-icon,
.c2.size--large .btn-label .icon {
  width: var(--bds-sizes-size-16);
  height: var(--bds-sizes-size-16);
}

.c2.size--jumbo {
  min-height: var(--bds-sizes-size-96);
  padding: 0 var(--bds-sizes-size-56);
}

.c2.size--jumbo .btn-label {
  font-size: var(--bds-sizes-size-24);
  line-height: var(--bds-sizes-size-40);
}

.c2.size--jumbo .btn-label .btn-start-icon,
.c2.size--jumbo .btn-label .btn-end-icon,
.c2.size--jumbo .btn-label .icon {
  width: var(--bds-sizes-size-24);
  height: var(--bds-sizes-size-24);
}

.c2.disabled {
  cursor: not-allowed;
}

.c2.disabled:active {
  pointer-events: none;
}

.c2.c2.c2 {
  outline: none;
  vertical-align: bottom;
  height: auto;
}

.c2.c2.c2::-moz-focus-inner {
  border: 0;
}

.c3.size--extra_small {
  min-width: var(--bds-sizes-size-32);
  min-height: var(--bds-sizes-size-32);
}

.c3.size--extra_small .btn-label > .btn-start-icon,
.c3.size--extra_small .btn-label > .btn-end-icon,
.c3.size--extra_small .btn-label > .icon {
  width: var(--bds-sizes-size-14);
  height: var(--bds-sizes-size-14);
}

.c3.size--small {
  min-width: var(--bds-sizes-size-40);
  min-height: var(--bds-sizes-size-40);
  padding: var(--bds-sizes-size-8);
}

.c3.size--small .btn-label > .btn-start-icon,
.c3.size--small .btn-label > .btn-end-icon,
.c3.size--small .btn-label > .icon {
  width: var(--bds-sizes-size-16);
  height: var(--bds-sizes-size-16);
}

.c3.size--medium {
  min-width: var(--bds-sizes-size-48);
  min-height: var(--bds-sizes-size-48);
  padding: var(--bds-sizes-size-12);
}

.c3.size--medium .btn-label > .btn-start-icon,
.c3.size--medium .btn-label > .btn-end-icon,
.c3.size--medium .btn-label > .icon {
  width: var(--bds-sizes-size-20);
  height: var(--bds-sizes-size-20);
}

.c3.size--large {
  min-width: var(--bds-sizes-size-56);
  min-height: var(--bds-sizes-size-56);
  padding: var(--bds-sizes-size-16);
}

.c3.size--large .btn-label > .btn-start-icon,
.c3.size--large .btn-label > .btn-end-icon,
.c3.size--large .btn-label > .icon {
  width: var(--bds-sizes-size-24);
  height: var(--bds-sizes-size-24);
}

.c3.size--jumbo {
  min-width: var(--bds-sizes-size-96);
  min-height: var(--bds-sizes-size-96);
  padding: var(--bds-sizes-size-32);
}

.c3.size--jumbo .btn-label > .btn-start-icon,
.c3.size--jumbo .btn-label > .btn-end-icon,
.c3.size--jumbo .btn-label > .icon {
  width: var(--bds-sizes-size-48);
  height: var(--bds-sizes-size-48);
}

.c0 {
  -webkit-transition: 0.3s filter ease-in-out;
  transition: 0.3s filter ease-in-out;
}

.c0 .menu {
  background-color: var(--bds-color-elevation-03);
  padding: var(--bds-sizes-size-16) 0;
}

.c0 .menu-popover-wrapper {
  opacity: 0;
  -webkit-transition: 0.2s opacity ease-in-out;
  transition: 0.2s opacity ease-in-out;
}

.c0.open:not(.submenu-popover) {
  -webkit-filter: var(--style-menu-popover-drop-shadow);
  filter: var(--style-menu-popover-drop-shadow);
}

.c0.open .menu-popover-wrapper {
  opacity: 1;
}

.c0.open .popover-reference.button:not(.submenu-reference) {
  box-shadow: none;
}

.c0.open .popover-reference.button:not(.submenu-reference).variant--ghost,
.c0.open .popover-reference.button:not(.submenu-reference).variant--inverse {
  background-color: var(--bds-color-elevation-03);
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='bottom'][data-popper-placement$='start'] > .menu {
  border-top-left-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='bottom'][data-popper-placement$='end'] > .menu {
  border-top-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='bottom'] + .popover-reference {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='top'][data-popper-placement$='start'] > .menu {
  border-bottom-left-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='top'][data-popper-placement$='end'] > .menu {
  border-bottom-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='top'] + .popover-reference {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='right'][data-popper-placement$='start'] > .menu {
  border-top-left-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='right'][data-popper-placement$='end'] > .menu {
  border-bottom-left-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='right'] + .popover-reference {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='left'][data-popper-placement$='start'] > .menu {
  border-top-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='left'][data-popper-placement$='end'] > .menu {
  border-bottom-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='left'] + .popover-reference {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c0.shape--rounded .menu {
  border-top-left-radius: var(--bds-border-radius-lg);
  border-top-right-radius: var(--bds-border-radius-lg);
  border-bottom-left-radius: var(--bds-border-radius-lg);
  border-bottom-right-radius: var(--bds-border-radius-lg);
}

.c0.shape--squared .menu {
  border-radius: 0;
}

@media only screen and (min-width:66.0625rem) {
  .c2.size--small .btn-label {
    font-size: var(--bds-sizes-size-14);
  }

  .c2.size--small .btn-label .btn-start-icon,
  .c2.size--small .btn-label .btn-end-icon,
  .c2.size--small .btn-label .icon {
    width: var(--bds-sizes-size-14);
    height: var(--bds-sizes-size-14);
  }

  .c2.size--medium .btn-label {
    font-size: var(--bds-sizes-size-16);
  }

  .c2.size--medium .btn-label .btn-start-icon,
  .c2.size--medium .btn-label .btn-end-icon,
  .c2.size--medium .btn-label .icon {
    width: var(--bds-sizes-size-16);
    height: var(--bds-sizes-size-16);
  }

  .c2.size--large .btn-label {
    font-size: var(--bds-sizes-size-18);
  }

  .c2.size--large .btn-label .btn-start-icon,
  .c2.size--large .btn-label .btn-end-icon,
  .c2.size--large .btn-label .icon {
    width: var(--bds-sizes-size-18);
    height: var(--bds-sizes-size-18);
  }

  .c2.size--jumbo .btn-label {
    font-size: var(--bds-sizes-size-28);
  }

  .c2.size--jumbo .btn-label .btn-start-icon,
  .c2.size--jumbo .btn-label .btn-end-icon,
  .c2.size--jumbo .btn-label .icon {
    width: var(--bds-sizes-size-28);
    height: var(--bds-sizes-size-28);
  }
}

<div
    class="c0 menu-popover shape--rounded open"
    style="--style-menu-popover-drop-shadow: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.2)) drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.14)) drop-shadow(0px 1px 10px rgba(0, 0, 0, 0.12));"
  >
    <button
      aria-expanded="true"
      aria-haspopup="true"
      aria-label="title"
      class="c1 c2 backyard button size--small variant--ghost color--subtle shape--rounded c3 icon-button popover-reference shape--rounded"
      color="subtle"
      style="--btn-disabled: hsl(0, 0%, 0%, .30); --btn-disabled-subdued: hsl(0, 0%, 96%, 1);"
      title="menu popover button"
      type="button"
    >
      <span
        class="label btn-label"
      >
        <svg
          aria-hidden="true"
          class="c4 icon icon-dots"
          role="presentation"
          style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
          viewBox="0 0 16 16"
        >
          <path
            clip-rule="evenodd"
            d="M3.2725 9.2725c.719 0 1.2917-.5662 1.2917-1.2725 0-.7063-.5727-1.2725-1.2917-1.2725C2.5726 6.7275 2 7.2937 2 8c0 .7063.5726 1.2725 1.2725 1.2725Zm4.7275 0A1.2681 1.2681 0 0 0 9.2726 8 1.2681 1.2681 0 0 0 8 6.7275c-.6999 0-1.2661.5662-1.2661 1.2725 0 .7063.5662 1.2725 1.2661 1.2725Zm4.7274 0A1.2682 1.2682 0 0 0 14 8a1.2682 1.2682 0 0 0-1.2726-1.2725c-.7189 0-1.2852.5662-1.2852 1.2725 0 .7063.5663 1.2725 1.2852 1.2725Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`MenuPopover Snapshots Menu open snapshot 1`] = `
<DocumentFragment>
  .c5 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c5:not(.color-override) g,
.c5:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c5:not(.color-override) g[stroke-width],
.c5:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c5:not(.color-override) g[stroke-width] *,
.c5:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c5.start {
  margin-right: var(--bds-sizes-size-8);
}

.c5.end {
  margin-left: var(--bds-sizes-size-8);
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  box-sizing: border-box;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  height: 100%;
}

.c4 .btn-label {
  display: inherit;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  -webkit-letter-spacing: .015rem;
  -moz-letter-spacing: .015rem;
  -ms-letter-spacing: .015rem;
  letter-spacing: .015rem;
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: 500;
}

.c4 .btn-label > .btn-start-icon {
  margin-right: var(--bds-sizes-size-8);
}

.c4 .btn-label > .btn-end-icon {
  margin-left: var(--bds-sizes-size-8);
}

.c4 .btn-label > .btn-end-icon svg {
  width: var(--bds-sizes-size-16);
  height: var(--bds-sizes-size-16);
}

.c4 .btn-label > .btn-start-icon,
.c4 .btn-label > .btn-end-icon,
.c4 .btn-label > .icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4.full-width {
  width: 100%;
  padding: var(--bds-sizes-size-12) var(--bds-sizes-size-32);
}

.c4.elevation {
  box-shadow: var(--bds-shadows-shadow-03);
}

.c4.variant--primary:enabled,
.c4.variant--primary.enabled {
  background-color: var(--btn-base);
  border-color: var(--btn-base);
}

.c4.variant--primary:enabled .btn-label,
.c4.variant--primary.enabled .btn-label {
  color: var(--btn-text);
}

.c4.variant--primary:enabled .btn-label .icon path,
.c4.variant--primary.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c4.variant--primary:hover,
.c4.variant--primary.hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-hover);
}

.c4.variant--primary:focus,
.c4.variant--primary.focus {
  box-shadow: inset 0 0 0 1px var(--btn-base),inset 0px 0 0 2px var(--btn-focus);
}

.c4.variant--primary:focus:hover,
.c4.variant--primary.focus:hover {
  box-shadow: inset 0 0 0 1px var(--btn-hover),inset 0px 0 0 2px var(--btn-focus);
}

.c4.variant--primary:active,
.c4.variant--primary.active {
  background-color: var(--btn-pressed);
  border-color: var(--btn-pressed);
}

.c4.variant--primary:disabled,
.c4.variant--primary.disabled {
  background-color: var(--btn-disabled);
  border-color: transparent;
}

.c4.variant--primary:disabled .btn-label,
.c4.variant--primary.disabled .btn-label {
  color: var(--btn-disabled);
}

.c4.variant--primary:disabled .btn-label .icon path,
.c4.variant--primary.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c4.variant--primary.c3.variant--primary.size--jumbo:focus,
.c4.variant--primary.c4.variant--primary.size--jumbo.focus {
  box-shadow: inset 0 0 0 2px var(--btn-base),inset 0px 0 0 4px var(--btn-focus);
}

.c4.variant--secondary:enabled,
.c4.variant--secondary.enabled {
  background-color: transparent;
  border-color: var(--btn-base);
}

.c4.variant--secondary:enabled .btn-label,
.c4.variant--secondary.enabled .btn-label {
  color: var(--btn-text);
}

.c4.variant--secondary:enabled .btn-label .icon path,
.c4.variant--secondary.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c4.variant--secondary:hover,
.c4.variant--secondary.hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-base);
}

.c4.variant--secondary:focus,
.c4.variant--secondary.focus {
  background-color: transparent;
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c4.variant--secondary:active,
.c4.variant--secondary:focus:active,
.c4.variant--secondary.active {
  background-color: var(--btn-pressed);
  border-color: var(--btn-focus);
}

.c4.variant--secondary:disabled,
.c4.variant--secondary.disabled {
  background-color: transparent;
  border-color: var(--btn-disabled);
}

.c4.variant--secondary:disabled .btn-label,
.c4.variant--secondary.disabled .btn-label {
  color: var(--btn-disabled);
}

.c4.variant--secondary:disabled .btn-label .icon path,
.c4.variant--secondary.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c4.variant--tertiary:enabled,
.c4.variant--tertiary.enabled {
  background-color: var(--btn-base-subdued);
  border-color: var(--btn-base-subdued);
}

.c4.variant--tertiary:enabled .btn-label,
.c4.variant--tertiary.enabled .btn-label {
  color: var(--btn-text);
}

.c4.variant--tertiary:enabled .btn-label .icon path,
.c4.variant--tertiary.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c4.variant--tertiary:hover,
.c4.variant--tertiary.hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-hover);
}

.c4.variant--tertiary:focus,
.c4.variant--tertiary.focus {
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c4.variant--tertiary:focus:hover,
.c4.variant--tertiary.focus:hover {
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c4.variant--tertiary:active,
.c4.variant--tertiary.active {
  background-color: var(--btn-pressed);
  border-color: var(--btn-pressed);
}

.c4.variant--tertiary:disabled,
.c4.variant--tertiary.disabled {
  background-color: var(--btn-disabled-subdued);
  border-color: var(--btn-disabled-subdued);
}

.c4.variant--tertiary:disabled .btn-label,
.c4.variant--tertiary.disabled .btn-label {
  color: var(--btn-disabled);
}

.c4.variant--tertiary:disabled .btn-label .icon path,
.c4.variant--tertiary.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c4.variant--ghost:enabled,
.c4.variant--ghost.enabled {
  background-color: transparent;
  border-color: transparent;
}

.c4.variant--ghost:enabled .btn-label,
.c4.variant--ghost.enabled .btn-label {
  color: var(--btn-text);
}

.c4.variant--ghost:enabled .btn-label .icon path,
.c4.variant--ghost.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c4.variant--ghost:hover,
.c4.variant--ghost.hover {
  background-color: var(--btn-hover);
  border-color: transparent;
}

.c4.variant--ghost:focus,
.c4.variant--ghost.focus {
  background-color: transparent;
  border-color: transparent;
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c4.variant--ghost:focus:hover,
.c4.variant--ghost.focus:hover {
  background-color: var(--btn-hover);
  border-color: transparent;
}

.c4.variant--ghost:active,
.c4.variant--ghost:focus:active,
.c4.variant--ghost.active {
  background-color: var(--btn-pressed);
  border-color: transparent;
}

.c4.variant--ghost:disabled,
.c4.variant--ghost.disabled {
  background-color: transparent;
  border-color: transparent;
}

.c4.variant--ghost:disabled .btn-label,
.c4.variant--ghost.disabled .btn-label {
  color: var(--btn-disabled);
}

.c4.variant--ghost:disabled .btn-label .icon path,
.c4.variant--ghost.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c4.variant--inverse:enabled,
.c4.variant--inverse.enabled {
  background-color: var(--btn-base-subdued);
  border-color: var(--btn-base-subdued);
}

.c4.variant--inverse:enabled .btn-label,
.c4.variant--inverse.enabled .btn-label {
  color: var(--btn-text);
}

.c4.variant--inverse:enabled .btn-label .icon path,
.c4.variant--inverse.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c4.variant--inverse:hover,
.c4.variant--inverse.hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-hover);
}

.c4.variant--inverse:focus,
.c4.variant--inverse.focus {
  background-color: var(--btn-base-subdued);
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c4.variant--inverse:focus:hover,
.c4.variant--inverse.focus:hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-focus);
}

.c4.variant--inverse:active,
.c4.variant--inverse.active {
  background-color: var(--btn-pressed);
  border-color: var(--btn-pressed);
}

.c4.variant--inverse:disabled,
.c4.variant--inverse.disabled {
  background-color: var(--btn-base-subdued);
  border-color: var(--btn-base-subdued);
}

.c4.variant--inverse:disabled .btn-label,
.c4.variant--inverse.disabled .btn-label {
  color: var(--btn-disabled);
}

.c4.variant--inverse:disabled .btn-label .icon path,
.c4.variant--inverse.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c4.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c4.shape--squared {
  border-radius: 0;
}

.c4.shape--circle {
  border-radius: var(--bds-border-radius-circle);
}

.c4.size--small {
  min-height: var(--bds-sizes-size-40);
  padding: 0 var(--bds-sizes-size-20);
}

.c4.size--small .btn-label {
  font-size: var(--bds-sizes-size-12);
  line-height: var(--bds-sizes-size-16);
}

.c4.size--small .btn-label .btn-start-icon,
.c4.size--small .btn-label .btn-end-icon,
.c4.size--small .btn-label .icon {
  width: var(--bds-sizes-size-12);
  height: var(--bds-sizes-size-12);
}

.c4.size--medium {
  min-height: var(--bds-sizes-size-48);
  padding: 0 var(--bds-sizes-size-32);
}

.c4.size--medium .btn-label {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c4.size--medium .btn-label .btn-start-icon,
.c4.size--medium .btn-label .btn-end-icon,
.c4.size--medium .btn-label .icon {
  width: var(--bds-sizes-size-14);
  height: var(--bds-sizes-size-14);
}

.c4.size--large {
  min-height: var(--bds-sizes-size-56);
  padding: 0 var(--bds-sizes-size-32);
}

.c4.size--large .btn-label {
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
}

.c4.size--large .btn-label .btn-start-icon,
.c4.size--large .btn-label .btn-end-icon,
.c4.size--large .btn-label .icon {
  width: var(--bds-sizes-size-16);
  height: var(--bds-sizes-size-16);
}

.c4.size--jumbo {
  min-height: var(--bds-sizes-size-96);
  padding: 0 var(--bds-sizes-size-56);
}

.c4.size--jumbo .btn-label {
  font-size: var(--bds-sizes-size-24);
  line-height: var(--bds-sizes-size-40);
}

.c4.size--jumbo .btn-label .btn-start-icon,
.c4.size--jumbo .btn-label .btn-end-icon,
.c4.size--jumbo .btn-label .icon {
  width: var(--bds-sizes-size-24);
  height: var(--bds-sizes-size-24);
}

.c4.disabled {
  cursor: not-allowed;
}

.c4.disabled:active {
  pointer-events: none;
}

.c4.c4.c4 {
  outline: none;
  vertical-align: bottom;
  height: auto;
}

.c4.c4.c4::-moz-focus-inner {
  border: 0;
}

.c6.size--extra_small {
  min-width: var(--bds-sizes-size-32);
  min-height: var(--bds-sizes-size-32);
}

.c6.size--extra_small .btn-label > .btn-start-icon,
.c6.size--extra_small .btn-label > .btn-end-icon,
.c6.size--extra_small .btn-label > .icon {
  width: var(--bds-sizes-size-14);
  height: var(--bds-sizes-size-14);
}

.c6.size--small {
  min-width: var(--bds-sizes-size-40);
  min-height: var(--bds-sizes-size-40);
  padding: var(--bds-sizes-size-8);
}

.c6.size--small .btn-label > .btn-start-icon,
.c6.size--small .btn-label > .btn-end-icon,
.c6.size--small .btn-label > .icon {
  width: var(--bds-sizes-size-16);
  height: var(--bds-sizes-size-16);
}

.c6.size--medium {
  min-width: var(--bds-sizes-size-48);
  min-height: var(--bds-sizes-size-48);
  padding: var(--bds-sizes-size-12);
}

.c6.size--medium .btn-label > .btn-start-icon,
.c6.size--medium .btn-label > .btn-end-icon,
.c6.size--medium .btn-label > .icon {
  width: var(--bds-sizes-size-20);
  height: var(--bds-sizes-size-20);
}

.c6.size--large {
  min-width: var(--bds-sizes-size-56);
  min-height: var(--bds-sizes-size-56);
  padding: var(--bds-sizes-size-16);
}

.c6.size--large .btn-label > .btn-start-icon,
.c6.size--large .btn-label > .btn-end-icon,
.c6.size--large .btn-label > .icon {
  width: var(--bds-sizes-size-24);
  height: var(--bds-sizes-size-24);
}

.c6.size--jumbo {
  min-width: var(--bds-sizes-size-96);
  min-height: var(--bds-sizes-size-96);
  padding: var(--bds-sizes-size-32);
}

.c6.size--jumbo .btn-label > .btn-start-icon,
.c6.size--jumbo .btn-label > .btn-end-icon,
.c6.size--jumbo .btn-label > .icon {
  width: var(--bds-sizes-size-48);
  height: var(--bds-sizes-size-48);
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c2.c2.c2 > .button {
  width: 100%;
  padding-left: var(--bds-sizes-size-16);
  padding-right: var(--bds-sizes-size-16);
  z-index: 1;
}

.c2.c2.c2 > .button .label {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c2.c2.c2 > .button .label .list-label {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c2.c2.c2 > .button .menu-item-icon-before {
  margin-right: var(--bds-sizes-size-8);
  width: var(--bds-sizes-size-14);
  height: var(--bds-sizes-size-14);
}

.c2.c2.c2 > .button .menu-item-icon-after {
  position: absolute;
  right: var(--bds-sizes-size-16);
}

.c2.c2.c2 > .button.selected {
  z-index: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
  width: var(--style-menu-width);
  height: var(--style-menu-height);
}

.c1.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.shape--rounded li > button {
  border-radius: 0;
}

.c1.shape--rounded li:first-of-type > button {
  border-top-left-radius: var(--bds-border-radius-lg);
  border-top-right-radius: var(--bds-border-radius-lg);
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c1.shape--rounded li:last-of-type > button {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: var(--bds-border-radius-lg);
  border-bottom-right-radius: var(--bds-border-radius-lg);
}

.c1.shape--squared {
  border-radius: 0;
}

.c1.shape--squared li > button {
  border-radius: 0;
}

.c1 > ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.c0 {
  -webkit-transition: 0.3s filter ease-in-out;
  transition: 0.3s filter ease-in-out;
}

.c0 .menu {
  background-color: var(--bds-color-elevation-03);
  padding: var(--bds-sizes-size-16) 0;
}

.c0 .menu-popover-wrapper {
  opacity: 0;
  -webkit-transition: 0.2s opacity ease-in-out;
  transition: 0.2s opacity ease-in-out;
}

.c0.open:not(.submenu-popover) {
  -webkit-filter: var(--style-menu-popover-drop-shadow);
  filter: var(--style-menu-popover-drop-shadow);
}

.c0.open .menu-popover-wrapper {
  opacity: 1;
}

.c0.open .popover-reference.button:not(.submenu-reference) {
  box-shadow: none;
}

.c0.open .popover-reference.button:not(.submenu-reference).variant--ghost,
.c0.open .popover-reference.button:not(.submenu-reference).variant--inverse {
  background-color: var(--bds-color-elevation-03);
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='bottom'][data-popper-placement$='start'] > .menu {
  border-top-left-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='bottom'][data-popper-placement$='end'] > .menu {
  border-top-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='bottom'] + .popover-reference {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='top'][data-popper-placement$='start'] > .menu {
  border-bottom-left-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='top'][data-popper-placement$='end'] > .menu {
  border-bottom-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='top'] + .popover-reference {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='right'][data-popper-placement$='start'] > .menu {
  border-top-left-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='right'][data-popper-placement$='end'] > .menu {
  border-bottom-left-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='right'] + .popover-reference {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='left'][data-popper-placement$='start'] > .menu {
  border-top-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='left'][data-popper-placement$='end'] > .menu {
  border-bottom-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='left'] + .popover-reference {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c0.shape--rounded .menu {
  border-top-left-radius: var(--bds-border-radius-lg);
  border-top-right-radius: var(--bds-border-radius-lg);
  border-bottom-left-radius: var(--bds-border-radius-lg);
  border-bottom-right-radius: var(--bds-border-radius-lg);
}

.c0.shape--squared .menu {
  border-radius: 0;
}

@media only screen and (min-width:66.0625rem) {
  .c4.size--small .btn-label {
    font-size: var(--bds-sizes-size-14);
  }

  .c4.size--small .btn-label .btn-start-icon,
  .c4.size--small .btn-label .btn-end-icon,
  .c4.size--small .btn-label .icon {
    width: var(--bds-sizes-size-14);
    height: var(--bds-sizes-size-14);
  }

  .c4.size--medium .btn-label {
    font-size: var(--bds-sizes-size-16);
  }

  .c4.size--medium .btn-label .btn-start-icon,
  .c4.size--medium .btn-label .btn-end-icon,
  .c4.size--medium .btn-label .icon {
    width: var(--bds-sizes-size-16);
    height: var(--bds-sizes-size-16);
  }

  .c4.size--large .btn-label {
    font-size: var(--bds-sizes-size-18);
  }

  .c4.size--large .btn-label .btn-start-icon,
  .c4.size--large .btn-label .btn-end-icon,
  .c4.size--large .btn-label .icon {
    width: var(--bds-sizes-size-18);
    height: var(--bds-sizes-size-18);
  }

  .c4.size--jumbo .btn-label {
    font-size: var(--bds-sizes-size-28);
  }

  .c4.size--jumbo .btn-label .btn-start-icon,
  .c4.size--jumbo .btn-label .btn-end-icon,
  .c4.size--jumbo .btn-label .icon {
    width: var(--bds-sizes-size-28);
    height: var(--bds-sizes-size-28);
  }
}

<div
    class="c0 menu-popover shape--rounded open"
    style="--style-menu-popover-drop-shadow: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.2)) drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.14)) drop-shadow(0px 1px 10px rgba(0, 0, 0, 0.12));"
  >
    <div
      class="menu-popover-wrapper shape--rounded"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px; z-index: 2; opacity: 1; pointer-events: all; transform: translate(0px, 2px);"
    >
      <div
        aria-label="Menu"
        class="c1 menu shape--squared"
        data-testid="menu"
        role="menu"
        style="--style-menu-width: auto; --style-menu-height: auto;"
      >
        <ul
          class="menu-list"
        >
          <li
            class="c2"
          >
            <button
              class="c3 c4 backyard button size--small variant--ghost color--neutral shape--rounded menu-item"
              color="neutral"
              role="menuitem"
              style="--btn-base: hsl(0, 0%, 44%, 1); --btn-focus: hsl(0, 0%, 44%, 1); --btn-text: hsl(0, 0%, 0%, .87); --btn-icon: hsl(0, 0%, 0%, .87); --btn-disabled: hsl(0, 0%, 0%, .30); --btn-disabled-subdued: hsl(0, 0%, 96%, 1); --style-menu-item-font-family: Roboto, Helvetica, Arial, sans-serif;"
              type="button"
            >
              <span
                class="label btn-label"
              >
                <svg
                  aria-hidden="true"
                  class="c5 icon icon-home-outlined menu-item-icon-before"
                  role="presentation"
                  style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.375 13.4015c.7295 0 1.1558-.4109 1.1558-1.1352V7.5762l.6627.6062c.1027.1027.2209.1746.3699.1746.2414 0 .4366-.149.4366-.3955 0-.1541-.0616-.2517-.1541-.339L12.0634 5.994V2.9683c0-.226-.149-.3698-.3699-.3698h-.673c-.226 0-.375.1438-.375.3698v1.7363l-2.029-1.8493C8.4365 2.691 8.2208 2.5985 8 2.5985c-.2209 0-.4366.0924-.6164.2568L2.154 7.6224c-.0925.0874-.1541.185-.1541.339 0 .2466.1952.3956.4366.3956.1439 0 .2672-.0719.37-.1746l.6626-.601v4.6849c0 .7243.4264 1.1352 1.1558 1.1352h6.75Zm-4.8596-.827H4.8048c-.3288 0-.5086-.1798-.5086-.5137V6.8262l3.524-3.2106c.0514-.0514.113-.0822.1798-.0822.0668 0 .1284.0257.185.0822l3.5188 3.2106v5.2346c0 .3339-.1798.5137-.5086.5137H9.4795v-3.411c0-.2363-.1541-.3853-.3904-.3853H6.911c-.2363 0-.3956.149-.3956.3853v3.411Z"
                    fill-rule="evenodd"
                  />
                </svg>
                <span
                  class="menu-item-label"
                >
                  Home
                </span>
              </span>
            </button>
          </li>
          <li
            class="c2"
          >
            <button
              class="c3 c4 backyard button size--small variant--ghost color--neutral shape--rounded menu-item"
              color="neutral"
              role="menuitem"
              style="--btn-base: hsl(0, 0%, 44%, 1); --btn-focus: hsl(0, 0%, 44%, 1); --btn-text: hsl(0, 0%, 0%, .87); --btn-icon: hsl(0, 0%, 0%, .87); --btn-disabled: hsl(0, 0%, 0%, .30); --btn-disabled-subdued: hsl(0, 0%, 96%, 1); --style-menu-item-font-family: Roboto, Helvetica, Arial, sans-serif;"
              type="button"
            >
              <span
                class="label btn-label"
              >
                <svg
                  aria-hidden="true"
                  class="c5 icon icon-credit-card menu-item-icon-before"
                  role="presentation"
                  style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12.8 3.091H3.2c-.666 0-1.194.546-1.194 1.2272L2 11.6818c0 .6812.534 1.2273 1.2 1.2273h9.6c.666 0 1.2-.5461 1.2-1.2273V4.3182c0-.6812-.534-1.2273-1.2-1.2273Zm.3429 8.4376a.5.5 0 0 1-.5.5H3.3571a.5.5 0 0 1-.5-.5V6.7143H13.143v4.8143Zm0-6.5286H2.8571v-.3571a.5.5 0 0 1 .5-.5h9.2858a.5.5 0 0 1 .5.5V5Z"
                    fill-rule="evenodd"
                  />
                </svg>
                <span
                  class="menu-item-label"
                >
                  Payment Methods
                </span>
              </span>
            </button>
          </li>
          <li
            class="c2"
          >
            <button
              class="c3 c4 backyard button size--small variant--ghost color--neutral shape--rounded menu-item"
              color="neutral"
              role="menuitem"
              style="--btn-base: hsl(0, 0%, 44%, 1); --btn-focus: hsl(0, 0%, 44%, 1); --btn-text: hsl(0, 0%, 0%, .87); --btn-icon: hsl(0, 0%, 0%, .87); --btn-disabled: hsl(0, 0%, 0%, .30); --btn-disabled-subdued: hsl(0, 0%, 96%, 1); --style-menu-item-font-family: Roboto, Helvetica, Arial, sans-serif;"
              type="button"
            >
              <span
                class="label btn-label"
              >
                <span
                  class="menu-item-label"
                >
                  No Icon Needed
                </span>
              </span>
            </button>
          </li>
          <li
            class="c2"
          >
            <button
              class="c3 c4 backyard button size--small variant--ghost color--neutral shape--rounded menu-item disabled disabled"
              color="neutral"
              disabled=""
              role="menuitem"
              style="--btn-base: hsl(0, 0%, 44%, 1); --btn-focus: hsl(0, 0%, 44%, 1); --btn-text: hsl(0, 0%, 0%, .87); --btn-icon: hsl(0, 0%, 0%, .87); --btn-disabled: hsl(0, 0%, 0%, .30); --btn-disabled-subdued: hsl(0, 0%, 96%, 1); --style-menu-item-font-family: Roboto, Helvetica, Arial, sans-serif;"
              type="button"
            >
              <span
                class="label btn-label"
              >
                <svg
                  aria-hidden="true"
                  class="c5 icon icon-download menu-item-icon-before"
                  role="presentation"
                  style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12.5842 14c.354 0 .599-.2586.599-.6126 0-.3539-.245-.6058-.599-.6058H8.1395a.6979.6979 0 0 0 .32-.1974l4.4991-4.506c.1361-.1429.2042-.2926.2042-.456 0-.3403-.2519-.599-.5922-.599-.1634 0-.3267.0613-.4356.1702l-1.5247 1.5043-2.0488 2.2393.0477-1.4566V2.6058c0-.354-.2519-.6058-.6058-.6058-.3608 0-.6126.2518-.6126.6058v6.8746l.0545 1.4634-2.0488-2.2461-1.5247-1.5043c-.1157-.1089-.2723-.1701-.4356-.1701-.3472 0-.5922.2586-.5922.599 0 .1633.068.313.1974.456l4.506 4.5059c.0884.1021.1973.1634.313.1974H3.4021c-.3471 0-.5853.2519-.5853.6058 0 .354.2382.6126.5853.6126h9.1821Z"
                    fill-rule="evenodd"
                  />
                </svg>
                <span
                  class="menu-item-label"
                >
                  Download
                </span>
              </span>
            </button>
          </li>
          <li
            class="c2"
          >
            <button
              class="c3 c4 backyard button size--small variant--primary color--error shape--rounded menu-item"
              color="error"
              role="menuitem"
              style="--btn-focus: hsl(0, 0%, 100%, 1); --btn-text: hsl(0, 0%, 100%, 1); --btn-icon: hsl(0, 0%, 100%, 1); --btn-disabled: hsl(0, 0%, 0%, .30); --btn-onDisabled: hsl(0, 0%, 100%, .30); --style-menu-item-font-family: Roboto, Helvetica, Arial, sans-serif;"
              type="button"
            >
              <span
                class="label btn-label"
              >
                <svg
                  aria-hidden="true"
                  class="c5 icon icon-close menu-item-icon-before"
                  role="presentation"
                  style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M13.8042 13.8032c.2573-.2648.2573-.6962 0-.9535L8.9611 7.9991l4.8431-4.8432c.2573-.2573.2648-.6962 0-.9535-.2649-.2648-.7038-.2648-.9611 0L8 7.0456 3.1569 2.2024c-.2573-.2648-.7038-.2724-.961 0-.2574.2649-.2574.6962 0 .9535l4.843 4.8432-4.843 4.8506c-.2574.2573-.265.6962 0 .9535.2648.2573.7037.2573.961 0L8 8.9602l4.8431 4.843c.2573.2573.7038.2649.9611 0Z"
                    fill-rule="evenodd"
                  />
                </svg>
                <span
                  class="menu-item-label"
                >
                  Alert
                </span>
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
    <button
      aria-expanded="true"
      aria-haspopup="true"
      aria-label="title"
      class="c3 c4 backyard button size--small variant--ghost color--subtle shape--rounded c6 icon-button popover-reference shape--rounded"
      color="subtle"
      style="--btn-disabled: hsl(0, 0%, 0%, .30); --btn-disabled-subdued: hsl(0, 0%, 96%, 1);"
      title="menu popover button"
      type="button"
    >
      <span
        class="label btn-label"
      >
        <svg
          aria-hidden="true"
          class="c5 icon icon-dots"
          role="presentation"
          style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
          viewBox="0 0 16 16"
        >
          <path
            clip-rule="evenodd"
            d="M3.2725 9.2725c.719 0 1.2917-.5662 1.2917-1.2725 0-.7063-.5727-1.2725-1.2917-1.2725C2.5726 6.7275 2 7.2937 2 8c0 .7063.5726 1.2725 1.2725 1.2725Zm4.7275 0A1.2681 1.2681 0 0 0 9.2726 8 1.2681 1.2681 0 0 0 8 6.7275c-.6999 0-1.2661.5662-1.2661 1.2725 0 .7063.5662 1.2725 1.2661 1.2725Zm4.7274 0A1.2682 1.2682 0 0 0 14 8a1.2682 1.2682 0 0 0-1.2726-1.2725c-.7189 0-1.2852.5662-1.2852 1.2725 0 .7063.5663 1.2725 1.2852 1.2725Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`MenuPopover Snapshots MenuPopover default snapshot 1`] = `
<DocumentFragment>
  .c5 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c5:not(.color-override) g,
.c5:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c5:not(.color-override) g[stroke-width],
.c5:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c5:not(.color-override) g[stroke-width] *,
.c5:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c5.start {
  margin-right: var(--bds-sizes-size-8);
}

.c5.end {
  margin-left: var(--bds-sizes-size-8);
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  box-sizing: border-box;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  height: 100%;
}

.c4 .btn-label {
  display: inherit;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  -webkit-letter-spacing: .015rem;
  -moz-letter-spacing: .015rem;
  -ms-letter-spacing: .015rem;
  letter-spacing: .015rem;
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: 500;
}

.c4 .btn-label > .btn-start-icon {
  margin-right: var(--bds-sizes-size-8);
}

.c4 .btn-label > .btn-end-icon {
  margin-left: var(--bds-sizes-size-8);
}

.c4 .btn-label > .btn-end-icon svg {
  width: var(--bds-sizes-size-16);
  height: var(--bds-sizes-size-16);
}

.c4 .btn-label > .btn-start-icon,
.c4 .btn-label > .btn-end-icon,
.c4 .btn-label > .icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4.full-width {
  width: 100%;
  padding: var(--bds-sizes-size-12) var(--bds-sizes-size-32);
}

.c4.elevation {
  box-shadow: var(--bds-shadows-shadow-03);
}

.c4.variant--primary:enabled,
.c4.variant--primary.enabled {
  background-color: var(--btn-base);
  border-color: var(--btn-base);
}

.c4.variant--primary:enabled .btn-label,
.c4.variant--primary.enabled .btn-label {
  color: var(--btn-text);
}

.c4.variant--primary:enabled .btn-label .icon path,
.c4.variant--primary.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c4.variant--primary:hover,
.c4.variant--primary.hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-hover);
}

.c4.variant--primary:focus,
.c4.variant--primary.focus {
  box-shadow: inset 0 0 0 1px var(--btn-base),inset 0px 0 0 2px var(--btn-focus);
}

.c4.variant--primary:focus:hover,
.c4.variant--primary.focus:hover {
  box-shadow: inset 0 0 0 1px var(--btn-hover),inset 0px 0 0 2px var(--btn-focus);
}

.c4.variant--primary:active,
.c4.variant--primary.active {
  background-color: var(--btn-pressed);
  border-color: var(--btn-pressed);
}

.c4.variant--primary:disabled,
.c4.variant--primary.disabled {
  background-color: var(--btn-disabled);
  border-color: transparent;
}

.c4.variant--primary:disabled .btn-label,
.c4.variant--primary.disabled .btn-label {
  color: var(--btn-disabled);
}

.c4.variant--primary:disabled .btn-label .icon path,
.c4.variant--primary.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c4.variant--primary.c3.variant--primary.size--jumbo:focus,
.c4.variant--primary.c4.variant--primary.size--jumbo.focus {
  box-shadow: inset 0 0 0 2px var(--btn-base),inset 0px 0 0 4px var(--btn-focus);
}

.c4.variant--secondary:enabled,
.c4.variant--secondary.enabled {
  background-color: transparent;
  border-color: var(--btn-base);
}

.c4.variant--secondary:enabled .btn-label,
.c4.variant--secondary.enabled .btn-label {
  color: var(--btn-text);
}

.c4.variant--secondary:enabled .btn-label .icon path,
.c4.variant--secondary.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c4.variant--secondary:hover,
.c4.variant--secondary.hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-base);
}

.c4.variant--secondary:focus,
.c4.variant--secondary.focus {
  background-color: transparent;
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c4.variant--secondary:active,
.c4.variant--secondary:focus:active,
.c4.variant--secondary.active {
  background-color: var(--btn-pressed);
  border-color: var(--btn-focus);
}

.c4.variant--secondary:disabled,
.c4.variant--secondary.disabled {
  background-color: transparent;
  border-color: var(--btn-disabled);
}

.c4.variant--secondary:disabled .btn-label,
.c4.variant--secondary.disabled .btn-label {
  color: var(--btn-disabled);
}

.c4.variant--secondary:disabled .btn-label .icon path,
.c4.variant--secondary.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c4.variant--tertiary:enabled,
.c4.variant--tertiary.enabled {
  background-color: var(--btn-base-subdued);
  border-color: var(--btn-base-subdued);
}

.c4.variant--tertiary:enabled .btn-label,
.c4.variant--tertiary.enabled .btn-label {
  color: var(--btn-text);
}

.c4.variant--tertiary:enabled .btn-label .icon path,
.c4.variant--tertiary.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c4.variant--tertiary:hover,
.c4.variant--tertiary.hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-hover);
}

.c4.variant--tertiary:focus,
.c4.variant--tertiary.focus {
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c4.variant--tertiary:focus:hover,
.c4.variant--tertiary.focus:hover {
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c4.variant--tertiary:active,
.c4.variant--tertiary.active {
  background-color: var(--btn-pressed);
  border-color: var(--btn-pressed);
}

.c4.variant--tertiary:disabled,
.c4.variant--tertiary.disabled {
  background-color: var(--btn-disabled-subdued);
  border-color: var(--btn-disabled-subdued);
}

.c4.variant--tertiary:disabled .btn-label,
.c4.variant--tertiary.disabled .btn-label {
  color: var(--btn-disabled);
}

.c4.variant--tertiary:disabled .btn-label .icon path,
.c4.variant--tertiary.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c4.variant--ghost:enabled,
.c4.variant--ghost.enabled {
  background-color: transparent;
  border-color: transparent;
}

.c4.variant--ghost:enabled .btn-label,
.c4.variant--ghost.enabled .btn-label {
  color: var(--btn-text);
}

.c4.variant--ghost:enabled .btn-label .icon path,
.c4.variant--ghost.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c4.variant--ghost:hover,
.c4.variant--ghost.hover {
  background-color: var(--btn-hover);
  border-color: transparent;
}

.c4.variant--ghost:focus,
.c4.variant--ghost.focus {
  background-color: transparent;
  border-color: transparent;
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c4.variant--ghost:focus:hover,
.c4.variant--ghost.focus:hover {
  background-color: var(--btn-hover);
  border-color: transparent;
}

.c4.variant--ghost:active,
.c4.variant--ghost:focus:active,
.c4.variant--ghost.active {
  background-color: var(--btn-pressed);
  border-color: transparent;
}

.c4.variant--ghost:disabled,
.c4.variant--ghost.disabled {
  background-color: transparent;
  border-color: transparent;
}

.c4.variant--ghost:disabled .btn-label,
.c4.variant--ghost.disabled .btn-label {
  color: var(--btn-disabled);
}

.c4.variant--ghost:disabled .btn-label .icon path,
.c4.variant--ghost.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c4.variant--inverse:enabled,
.c4.variant--inverse.enabled {
  background-color: var(--btn-base-subdued);
  border-color: var(--btn-base-subdued);
}

.c4.variant--inverse:enabled .btn-label,
.c4.variant--inverse.enabled .btn-label {
  color: var(--btn-text);
}

.c4.variant--inverse:enabled .btn-label .icon path,
.c4.variant--inverse.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c4.variant--inverse:hover,
.c4.variant--inverse.hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-hover);
}

.c4.variant--inverse:focus,
.c4.variant--inverse.focus {
  background-color: var(--btn-base-subdued);
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c4.variant--inverse:focus:hover,
.c4.variant--inverse.focus:hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-focus);
}

.c4.variant--inverse:active,
.c4.variant--inverse.active {
  background-color: var(--btn-pressed);
  border-color: var(--btn-pressed);
}

.c4.variant--inverse:disabled,
.c4.variant--inverse.disabled {
  background-color: var(--btn-base-subdued);
  border-color: var(--btn-base-subdued);
}

.c4.variant--inverse:disabled .btn-label,
.c4.variant--inverse.disabled .btn-label {
  color: var(--btn-disabled);
}

.c4.variant--inverse:disabled .btn-label .icon path,
.c4.variant--inverse.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c4.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c4.shape--squared {
  border-radius: 0;
}

.c4.shape--circle {
  border-radius: var(--bds-border-radius-circle);
}

.c4.size--small {
  min-height: var(--bds-sizes-size-40);
  padding: 0 var(--bds-sizes-size-20);
}

.c4.size--small .btn-label {
  font-size: var(--bds-sizes-size-12);
  line-height: var(--bds-sizes-size-16);
}

.c4.size--small .btn-label .btn-start-icon,
.c4.size--small .btn-label .btn-end-icon,
.c4.size--small .btn-label .icon {
  width: var(--bds-sizes-size-12);
  height: var(--bds-sizes-size-12);
}

.c4.size--medium {
  min-height: var(--bds-sizes-size-48);
  padding: 0 var(--bds-sizes-size-32);
}

.c4.size--medium .btn-label {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c4.size--medium .btn-label .btn-start-icon,
.c4.size--medium .btn-label .btn-end-icon,
.c4.size--medium .btn-label .icon {
  width: var(--bds-sizes-size-14);
  height: var(--bds-sizes-size-14);
}

.c4.size--large {
  min-height: var(--bds-sizes-size-56);
  padding: 0 var(--bds-sizes-size-32);
}

.c4.size--large .btn-label {
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
}

.c4.size--large .btn-label .btn-start-icon,
.c4.size--large .btn-label .btn-end-icon,
.c4.size--large .btn-label .icon {
  width: var(--bds-sizes-size-16);
  height: var(--bds-sizes-size-16);
}

.c4.size--jumbo {
  min-height: var(--bds-sizes-size-96);
  padding: 0 var(--bds-sizes-size-56);
}

.c4.size--jumbo .btn-label {
  font-size: var(--bds-sizes-size-24);
  line-height: var(--bds-sizes-size-40);
}

.c4.size--jumbo .btn-label .btn-start-icon,
.c4.size--jumbo .btn-label .btn-end-icon,
.c4.size--jumbo .btn-label .icon {
  width: var(--bds-sizes-size-24);
  height: var(--bds-sizes-size-24);
}

.c4.disabled {
  cursor: not-allowed;
}

.c4.disabled:active {
  pointer-events: none;
}

.c4.c4.c4 {
  outline: none;
  vertical-align: bottom;
  height: auto;
}

.c4.c4.c4::-moz-focus-inner {
  border: 0;
}

.c6.size--extra_small {
  min-width: var(--bds-sizes-size-32);
  min-height: var(--bds-sizes-size-32);
}

.c6.size--extra_small .btn-label > .btn-start-icon,
.c6.size--extra_small .btn-label > .btn-end-icon,
.c6.size--extra_small .btn-label > .icon {
  width: var(--bds-sizes-size-14);
  height: var(--bds-sizes-size-14);
}

.c6.size--small {
  min-width: var(--bds-sizes-size-40);
  min-height: var(--bds-sizes-size-40);
  padding: var(--bds-sizes-size-8);
}

.c6.size--small .btn-label > .btn-start-icon,
.c6.size--small .btn-label > .btn-end-icon,
.c6.size--small .btn-label > .icon {
  width: var(--bds-sizes-size-16);
  height: var(--bds-sizes-size-16);
}

.c6.size--medium {
  min-width: var(--bds-sizes-size-48);
  min-height: var(--bds-sizes-size-48);
  padding: var(--bds-sizes-size-12);
}

.c6.size--medium .btn-label > .btn-start-icon,
.c6.size--medium .btn-label > .btn-end-icon,
.c6.size--medium .btn-label > .icon {
  width: var(--bds-sizes-size-20);
  height: var(--bds-sizes-size-20);
}

.c6.size--large {
  min-width: var(--bds-sizes-size-56);
  min-height: var(--bds-sizes-size-56);
  padding: var(--bds-sizes-size-16);
}

.c6.size--large .btn-label > .btn-start-icon,
.c6.size--large .btn-label > .btn-end-icon,
.c6.size--large .btn-label > .icon {
  width: var(--bds-sizes-size-24);
  height: var(--bds-sizes-size-24);
}

.c6.size--jumbo {
  min-width: var(--bds-sizes-size-96);
  min-height: var(--bds-sizes-size-96);
  padding: var(--bds-sizes-size-32);
}

.c6.size--jumbo .btn-label > .btn-start-icon,
.c6.size--jumbo .btn-label > .btn-end-icon,
.c6.size--jumbo .btn-label > .icon {
  width: var(--bds-sizes-size-48);
  height: var(--bds-sizes-size-48);
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c2.c2.c2 > .button {
  width: 100%;
  padding-left: var(--bds-sizes-size-16);
  padding-right: var(--bds-sizes-size-16);
  z-index: 1;
}

.c2.c2.c2 > .button .label {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c2.c2.c2 > .button .label .list-label {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c2.c2.c2 > .button .menu-item-icon-before {
  margin-right: var(--bds-sizes-size-8);
  width: var(--bds-sizes-size-14);
  height: var(--bds-sizes-size-14);
}

.c2.c2.c2 > .button .menu-item-icon-after {
  position: absolute;
  right: var(--bds-sizes-size-16);
}

.c2.c2.c2 > .button.selected {
  z-index: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
  width: var(--style-menu-width);
  height: var(--style-menu-height);
}

.c1.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.shape--rounded li > button {
  border-radius: 0;
}

.c1.shape--rounded li:first-of-type > button {
  border-top-left-radius: var(--bds-border-radius-lg);
  border-top-right-radius: var(--bds-border-radius-lg);
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c1.shape--rounded li:last-of-type > button {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: var(--bds-border-radius-lg);
  border-bottom-right-radius: var(--bds-border-radius-lg);
}

.c1.shape--squared {
  border-radius: 0;
}

.c1.shape--squared li > button {
  border-radius: 0;
}

.c1 > ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.c0 {
  -webkit-transition: 0.3s filter ease-in-out;
  transition: 0.3s filter ease-in-out;
}

.c0 .menu {
  background-color: var(--bds-color-elevation-03);
  padding: var(--bds-sizes-size-16) 0;
}

.c0 .menu-popover-wrapper {
  opacity: 0;
  -webkit-transition: 0.2s opacity ease-in-out;
  transition: 0.2s opacity ease-in-out;
}

.c0.open:not(.submenu-popover) {
  -webkit-filter: var(--style-menu-popover-drop-shadow);
  filter: var(--style-menu-popover-drop-shadow);
}

.c0.open .menu-popover-wrapper {
  opacity: 1;
}

.c0.open .popover-reference.button:not(.submenu-reference) {
  box-shadow: none;
}

.c0.open .popover-reference.button:not(.submenu-reference).variant--ghost,
.c0.open .popover-reference.button:not(.submenu-reference).variant--inverse {
  background-color: var(--bds-color-elevation-03);
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='bottom'][data-popper-placement$='start'] > .menu {
  border-top-left-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='bottom'][data-popper-placement$='end'] > .menu {
  border-top-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='bottom'] + .popover-reference {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='top'][data-popper-placement$='start'] > .menu {
  border-bottom-left-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='top'][data-popper-placement$='end'] > .menu {
  border-bottom-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='top'] + .popover-reference {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='right'][data-popper-placement$='start'] > .menu {
  border-top-left-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='right'][data-popper-placement$='end'] > .menu {
  border-bottom-left-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='right'] + .popover-reference {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='left'][data-popper-placement$='start'] > .menu {
  border-top-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='left'][data-popper-placement$='end'] > .menu {
  border-bottom-right-radius: 0;
}

.c0.merge-popover.open .menu-popover-wrapper[data-popper-placement^='left'] + .popover-reference {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c0.shape--rounded .menu {
  border-top-left-radius: var(--bds-border-radius-lg);
  border-top-right-radius: var(--bds-border-radius-lg);
  border-bottom-left-radius: var(--bds-border-radius-lg);
  border-bottom-right-radius: var(--bds-border-radius-lg);
}

.c0.shape--squared .menu {
  border-radius: 0;
}

@media only screen and (min-width:66.0625rem) {
  .c4.size--small .btn-label {
    font-size: var(--bds-sizes-size-14);
  }

  .c4.size--small .btn-label .btn-start-icon,
  .c4.size--small .btn-label .btn-end-icon,
  .c4.size--small .btn-label .icon {
    width: var(--bds-sizes-size-14);
    height: var(--bds-sizes-size-14);
  }

  .c4.size--medium .btn-label {
    font-size: var(--bds-sizes-size-16);
  }

  .c4.size--medium .btn-label .btn-start-icon,
  .c4.size--medium .btn-label .btn-end-icon,
  .c4.size--medium .btn-label .icon {
    width: var(--bds-sizes-size-16);
    height: var(--bds-sizes-size-16);
  }

  .c4.size--large .btn-label {
    font-size: var(--bds-sizes-size-18);
  }

  .c4.size--large .btn-label .btn-start-icon,
  .c4.size--large .btn-label .btn-end-icon,
  .c4.size--large .btn-label .icon {
    width: var(--bds-sizes-size-18);
    height: var(--bds-sizes-size-18);
  }

  .c4.size--jumbo .btn-label {
    font-size: var(--bds-sizes-size-28);
  }

  .c4.size--jumbo .btn-label .btn-start-icon,
  .c4.size--jumbo .btn-label .btn-end-icon,
  .c4.size--jumbo .btn-label .icon {
    width: var(--bds-sizes-size-28);
    height: var(--bds-sizes-size-28);
  }
}

<div
    class="c0 menu-popover shape--rounded"
    style="--style-menu-popover-drop-shadow: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.2)) drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.14)) drop-shadow(0px 1px 10px rgba(0, 0, 0, 0.12));"
  >
    <div
      class="menu-popover-wrapper shape--rounded"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px; z-index: 2; opacity: 0; pointer-events: none; transform: translate(0px, 2px);"
    >
      <div
        aria-label="Menu"
        class="c1 menu shape--squared"
        data-testid="menu"
        role="menu"
        style="--style-menu-width: auto; --style-menu-height: auto;"
      >
        <ul
          class="menu-list"
        >
          <li
            class="c2"
          >
            <button
              class="c3 c4 backyard button size--small variant--ghost color--neutral shape--rounded menu-item"
              color="neutral"
              role="menuitem"
              style="--btn-base: hsl(0, 0%, 44%, 1); --btn-focus: hsl(0, 0%, 44%, 1); --btn-text: hsl(0, 0%, 0%, .87); --btn-icon: hsl(0, 0%, 0%, .87); --btn-disabled: hsl(0, 0%, 0%, .30); --btn-disabled-subdued: hsl(0, 0%, 96%, 1); --style-menu-item-font-family: Roboto, Helvetica, Arial, sans-serif;"
              type="button"
            >
              <span
                class="label btn-label"
              >
                <svg
                  aria-hidden="true"
                  class="c5 icon icon-home-outlined menu-item-icon-before"
                  role="presentation"
                  style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.375 13.4015c.7295 0 1.1558-.4109 1.1558-1.1352V7.5762l.6627.6062c.1027.1027.2209.1746.3699.1746.2414 0 .4366-.149.4366-.3955 0-.1541-.0616-.2517-.1541-.339L12.0634 5.994V2.9683c0-.226-.149-.3698-.3699-.3698h-.673c-.226 0-.375.1438-.375.3698v1.7363l-2.029-1.8493C8.4365 2.691 8.2208 2.5985 8 2.5985c-.2209 0-.4366.0924-.6164.2568L2.154 7.6224c-.0925.0874-.1541.185-.1541.339 0 .2466.1952.3956.4366.3956.1439 0 .2672-.0719.37-.1746l.6626-.601v4.6849c0 .7243.4264 1.1352 1.1558 1.1352h6.75Zm-4.8596-.827H4.8048c-.3288 0-.5086-.1798-.5086-.5137V6.8262l3.524-3.2106c.0514-.0514.113-.0822.1798-.0822.0668 0 .1284.0257.185.0822l3.5188 3.2106v5.2346c0 .3339-.1798.5137-.5086.5137H9.4795v-3.411c0-.2363-.1541-.3853-.3904-.3853H6.911c-.2363 0-.3956.149-.3956.3853v3.411Z"
                    fill-rule="evenodd"
                  />
                </svg>
                <span
                  class="menu-item-label"
                >
                  Home
                </span>
              </span>
            </button>
          </li>
          <li
            class="c2"
          >
            <button
              class="c3 c4 backyard button size--small variant--ghost color--neutral shape--rounded menu-item"
              color="neutral"
              role="menuitem"
              style="--btn-base: hsl(0, 0%, 44%, 1); --btn-focus: hsl(0, 0%, 44%, 1); --btn-text: hsl(0, 0%, 0%, .87); --btn-icon: hsl(0, 0%, 0%, .87); --btn-disabled: hsl(0, 0%, 0%, .30); --btn-disabled-subdued: hsl(0, 0%, 96%, 1); --style-menu-item-font-family: Roboto, Helvetica, Arial, sans-serif;"
              type="button"
            >
              <span
                class="label btn-label"
              >
                <svg
                  aria-hidden="true"
                  class="c5 icon icon-credit-card menu-item-icon-before"
                  role="presentation"
                  style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12.8 3.091H3.2c-.666 0-1.194.546-1.194 1.2272L2 11.6818c0 .6812.534 1.2273 1.2 1.2273h9.6c.666 0 1.2-.5461 1.2-1.2273V4.3182c0-.6812-.534-1.2273-1.2-1.2273Zm.3429 8.4376a.5.5 0 0 1-.5.5H3.3571a.5.5 0 0 1-.5-.5V6.7143H13.143v4.8143Zm0-6.5286H2.8571v-.3571a.5.5 0 0 1 .5-.5h9.2858a.5.5 0 0 1 .5.5V5Z"
                    fill-rule="evenodd"
                  />
                </svg>
                <span
                  class="menu-item-label"
                >
                  Payment Methods
                </span>
              </span>
            </button>
          </li>
          <li
            class="c2"
          >
            <button
              class="c3 c4 backyard button size--small variant--ghost color--neutral shape--rounded menu-item"
              color="neutral"
              role="menuitem"
              style="--btn-base: hsl(0, 0%, 44%, 1); --btn-focus: hsl(0, 0%, 44%, 1); --btn-text: hsl(0, 0%, 0%, .87); --btn-icon: hsl(0, 0%, 0%, .87); --btn-disabled: hsl(0, 0%, 0%, .30); --btn-disabled-subdued: hsl(0, 0%, 96%, 1); --style-menu-item-font-family: Roboto, Helvetica, Arial, sans-serif;"
              type="button"
            >
              <span
                class="label btn-label"
              >
                <span
                  class="menu-item-label"
                >
                  No Icon Needed
                </span>
              </span>
            </button>
          </li>
          <li
            class="c2"
          >
            <button
              class="c3 c4 backyard button size--small variant--ghost color--neutral shape--rounded menu-item disabled disabled"
              color="neutral"
              disabled=""
              role="menuitem"
              style="--btn-base: hsl(0, 0%, 44%, 1); --btn-focus: hsl(0, 0%, 44%, 1); --btn-text: hsl(0, 0%, 0%, .87); --btn-icon: hsl(0, 0%, 0%, .87); --btn-disabled: hsl(0, 0%, 0%, .30); --btn-disabled-subdued: hsl(0, 0%, 96%, 1); --style-menu-item-font-family: Roboto, Helvetica, Arial, sans-serif;"
              type="button"
            >
              <span
                class="label btn-label"
              >
                <svg
                  aria-hidden="true"
                  class="c5 icon icon-download menu-item-icon-before"
                  role="presentation"
                  style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12.5842 14c.354 0 .599-.2586.599-.6126 0-.3539-.245-.6058-.599-.6058H8.1395a.6979.6979 0 0 0 .32-.1974l4.4991-4.506c.1361-.1429.2042-.2926.2042-.456 0-.3403-.2519-.599-.5922-.599-.1634 0-.3267.0613-.4356.1702l-1.5247 1.5043-2.0488 2.2393.0477-1.4566V2.6058c0-.354-.2519-.6058-.6058-.6058-.3608 0-.6126.2518-.6126.6058v6.8746l.0545 1.4634-2.0488-2.2461-1.5247-1.5043c-.1157-.1089-.2723-.1701-.4356-.1701-.3472 0-.5922.2586-.5922.599 0 .1633.068.313.1974.456l4.506 4.5059c.0884.1021.1973.1634.313.1974H3.4021c-.3471 0-.5853.2519-.5853.6058 0 .354.2382.6126.5853.6126h9.1821Z"
                    fill-rule="evenodd"
                  />
                </svg>
                <span
                  class="menu-item-label"
                >
                  Download
                </span>
              </span>
            </button>
          </li>
          <li
            class="c2"
          >
            <button
              class="c3 c4 backyard button size--small variant--primary color--error shape--rounded menu-item"
              color="error"
              role="menuitem"
              style="--btn-focus: hsl(0, 0%, 100%, 1); --btn-text: hsl(0, 0%, 100%, 1); --btn-icon: hsl(0, 0%, 100%, 1); --btn-disabled: hsl(0, 0%, 0%, .30); --btn-onDisabled: hsl(0, 0%, 100%, .30); --style-menu-item-font-family: Roboto, Helvetica, Arial, sans-serif;"
              type="button"
            >
              <span
                class="label btn-label"
              >
                <svg
                  aria-hidden="true"
                  class="c5 icon icon-close menu-item-icon-before"
                  role="presentation"
                  style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M13.8042 13.8032c.2573-.2648.2573-.6962 0-.9535L8.9611 7.9991l4.8431-4.8432c.2573-.2573.2648-.6962 0-.9535-.2649-.2648-.7038-.2648-.9611 0L8 7.0456 3.1569 2.2024c-.2573-.2648-.7038-.2724-.961 0-.2574.2649-.2574.6962 0 .9535l4.843 4.8432-4.843 4.8506c-.2574.2573-.265.6962 0 .9535.2648.2573.7037.2573.961 0L8 8.9602l4.8431 4.843c.2573.2573.7038.2649.9611 0Z"
                    fill-rule="evenodd"
                  />
                </svg>
                <span
                  class="menu-item-label"
                >
                  Alert
                </span>
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="title"
      class="c3 c4 backyard button size--small variant--ghost color--neutral shape--rounded c6 icon-button popover-reference shape--rounded"
      color="neutral"
      style="--btn-base: hsl(0, 0%, 44%, 1); --btn-focus: hsl(0, 0%, 44%, 1); --btn-text: hsl(0, 0%, 0%, .87); --btn-icon: hsl(0, 0%, 0%, .87); --btn-disabled: hsl(0, 0%, 0%, .30); --btn-disabled-subdued: hsl(0, 0%, 96%, 1);"
      title="menu popover button"
      type="button"
    >
      <span
        class="label btn-label"
      >
        <svg
          aria-hidden="true"
          class="c5 icon icon-dots-vertical"
          role="presentation"
          style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
          viewBox="0 0 16 16"
        >
          <path
            clip-rule="evenodd"
            d="M9.2726 12.7275c0-.719-.5663-1.2917-1.2725-1.2917-.7063 0-1.2726.5727-1.2726 1.2917 0 .6999.5663 1.2725 1.2726 1.2725.7062 0 1.2725-.5726 1.2725-1.2725Zm0-4.7275a1.2681 1.2681 0 0 0-1.2725-1.2726A1.2681 1.2681 0 0 0 6.7275 8c0 .6999.5663 1.2661 1.2726 1.2661.7062 0 1.2725-.5662 1.2725-1.2661Zm0-4.7274A1.2681 1.2681 0 0 0 8.0001 2a1.2681 1.2681 0 0 0-1.2726 1.2726c0 .719.5663 1.2852 1.2726 1.2852.7062 0 1.2725-.5663 1.2725-1.2852Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;
